[project]
name = "reinforced-smc-torch"
version = "0.1.0"
description = "Reinforced Sequential Monte Carlo for Amortised Sampling (PyTorch version)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "einops>=0.6.0",
    "numpy<2",
    "ott-jax>=0.6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.66.1",
    "POT>=0.9.0",
    "wandb>=0.15.0",
    "mdtraj>=1.10.3",
    "openmm>=8.2.0",
    "openmmtools @ git+https://github.com/choderalab/openmmtools.git@0.24.2",
    "boltzgen @ git+https://github.com/VincentStimper/boltzmann-generators.git",
    "netcdf4>=1.6.0",
    "mpiplus @ git+https://github.com/choderalab/mpiplus.git@v0.0.2",
    "pymbar>=3.0.0",
    "numba",
]

[dependency-groups]
cu128 = ["torch>=2.0.0"]
cu126 = ["torch>=2.0.0"]
cu130 = ["torch>=2.0.0"]
cpu = ["torch>=2.0.0"]

[tool.uv]
default-groups = ["cu128"]
conflicts = [
    [{ group = "cu128" }, { group = "cu126" }],
    [{ group = "cu128" }, { group = "cu130" }],
    [{ group = "cu128" }, { group = "cpu" }],
    [{ group = "cu126" }, { group = "cu130" }],
    [{ group = "cu126" }, { group = "cpu" }],
    [{ group = "cu130" }, { group = "cpu" }],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", group = "cu128" },
    { index = "pytorch-cu126", group = "cu126" },
    { index = "pytorch-cu130", group = "cu130" },
    { index = "pytorch-cpu", group = "cpu" },
]
